<resources>
    <string name="app_name">Mihin sattuu?</string>
    <string name="first_launch_activity_name">Tervetuloa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- First launch -->
    <string name="user_data_message">Hei, \n\nja tervetuloa käyttämään Mihin sattuu? -sovellusta.\n\nSovelluksen avulla voit seurata hyvinvointiasi koettujen kipujen näkökulmasta. Ennen sovelluksen käyttöönottoa tarvitsemme hieman tietoa sinusta.</string>
    <string name="disclaimer">Vastuuvapauslauseke:\nSovellusta ei ole tarkoitettu lääkinnälliseen käyttöön vaan oman hyvinvoinnin omaehtoiseen seuraamiseen. Keskustele aina lääkinnällisistä asioista sekä kivusta lääkärisi tai terveydenhuollon edustajan kanssa.</string>
    <string name="user_data_nextButton">Seuraava</string>
    <string name="user_data_backButton">Takaisin</string>
    <string name="user_data_doneButton">Valmis</string>
    <string name="user_data_title">Käyttäjätiedot</string>
    <string name="user_data_text_name">Etunimi</string>
    <string name="user_data_name_example">Maija</string>
    <string name="user_data_text_lastname">Sukunimi</string>
    <string name="user_data_last_name_example">Markkanen</string>
    <string name="user_data_text_long_term_illness">Pitkäaikaissairaudet</string>
    <string name="user_data_text_age_title">Syntymäpäivä</string>
    <string name="user_data_birthdate_example">13.13.2013</string>
    <string name="user_data_button_pick_a_date">Kalenteri</string>
    <string name="user_data_pick_a_date">Valitse syntymäpäivä</string>
    <string name="user_data_text_age">pp.kk.vvvv</string>
    <string name="user_data_text_height">Pituus</string>
    <string name="user_data_height_example">170</string>
    <string name="user_data_text_weight">Paino</string>
    <string name="user_data_weight_example">77</string>
    <string name="user_data_long_term_illness">Onko sinulla pitkäaikaissairauksia?</string>
    <string name="radio_info_yes">Kyllä</string>
    <string name="radio_info_no">Ei</string>
    <string name="radio_button_yes">Kyllä</string>
    <string name="radio_button_no">Ei</string>
    <string name="user_data_text_sent">Kiitos! Tietosi on tallennettu.\n\nVoit nyt alkaa käyttää sovellusta.</string>
    <!--First Launch End -->

    <string name="main_activity_pain_history">Kipuhistoria</string>
    <string name="main_activity_medicines">Lääkkeet</string>
    <string name="main_activity_settings">Asetukset</string>
    <string name="main_activity_own_information">Omat tiedot</string>
    <string name="main_activity_plus">Mihin sattuu?</string>
    <string name="delete_data">Poista tiedot</string>
    <string name="profile_menu_edit">Muokkaa</string>
    <string name="birthdate">Syntymäpäivä</string>

    <!-- NewPainLog -->
    <string name="where_is_the_pain">Mihin sattuu?</string>
    <string name="describe_the_pain">Voit kertoa tarkemmin kivusta tässä...</string>

    <string-array name="list_of_pains">
        <item>Pää</item>
        <item>Niska</item>
        <item>Hartia</item>
        <item>Käsi</item>
        <item>Yläselkä</item>
        <item>Alaselkä</item>
        <item>Vatsa</item>
        <item>Jalka</item>
        <item>Polvi</item>
        <item>Ei mikään näistä</item>
    </string-array>

    <string name="have_you_taken_medicine_for_the_pain">Oletko ottanut kipuun lääkettä?</string>
    <string name="medicine_taken_for_the_pain">Kirjaa lääkkeet tähän...</string>
    <string name="button_ready">Valmis</string>
    <string name="how_strong_is_the_pain">Kuinka kova kipu on asteikolla 1-10</string>
    <string name="how_does_the_pain_affect">Miten kipu vaikuttaa mielialaasi?</string>
    <string name="tell_about_your_feelings">Voit kertoa mielialastasi vapaasti tässä...</string>
    <!--NewPainLog End -->
    <string name="no_medicine_is_taken">Ei ottanut lääkkettä</string>
    <string name="taken_medicine">Ottanut lääkkettä:</string>
    <!--ProfileEdit -->
    <string name="profile_edit_discard">Peruuta</string>
    <string name="profile_edit_save">Tallenna</string>

    <!--Notification channel Strings -->
    <string name="channel_name">PainLog</string>
    <string name="channel_description">PainLogQuery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>