<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Gavril Tschokkinen -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.painhistory.NewPainLogActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroupLogPain"
            android:layout_width="75dp"
            android:layout_height="112dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:checkedButton="@id/radioButtonPainLogNo"
            android:onClick="buttonManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/radioButtonPainLogYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonManager"
                android:text="@string/radio_button_yes" />

            <RadioButton
                android:id="@+id/radioButtonPainLogNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonManager"
                android:text="@string/radio_button_no" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/have_you_taken_medicine_for_the_pain"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextMedicineTaken"
            android:layout_width="225dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/medicine_taken_for_the_pain"
            android:inputType="textPersonName"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/radioGroupLogPain"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/buttonLogPainMedicineReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="buttonManager"
            android:text="@string/user_data_nextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>